--- a/imooc-security-browser/src/main/resources/resources/imooc-signIn.html
+++ b/imooc-security-browser/src/main/resources/resources/imooc-signIn.html
@@ -61,5 +61,27 @@
     </form>
 
 
+    <h3>短信验证码登录</h3>
+    <form action="/authentication/mobile" method="post">
+        <table>
+            <tr>
+                <td>手机号码:</td>
+                <td><input type="text" name="mobile" value="15397141395"/></td>
+            </tr>
+
+            <tr>
+                <td>短信验证码:</td>
+                <td>
+                    <input type="text" name="smsCode"/>
+                    <a href="/code/sms?mobile=15397141395">发送</a>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2"><button type="submit">登录</button> </td>
+            </tr>
+        </table>
+    </form>
+
+
 </body>
 </html>
